--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #d3cec4;
   --foreground: #171717;
+}
+
+.dark {
+  --background: #050713;
+  --foreground: #ededed;
 }
 
 @theme inline {
@@ -10,17 +15,14 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-orbitron: var(--font-orbitron);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.radix-themes {
+  --default-font-family: var(--font-orbitron), system-ui, sans-serif !important;
 }
